# rfc39

./: Cargo.nix  Cargo.toml  default.nix  flake.nix  maintainer-list.nix  shell.nix
data/: maintainer-list-05d273a45ed741d61ac6918361658c0c57b0ba41.blame  maintainer-list-26b59efa8a747e82077e8430aa671db365d49b97.blame  maintainer-list-822f480922fe2a0a38bc9de429cb2457b2eda96f.blame  maintainer-list-8e462995ba6deaeec9fd6dc6d3b9a110c08e5955.blame  maintainer-list-9ce5fb002a7cf2369cddec8c25519ff73e0cf394.blame  maintainer-list-cf1b51aba2780fda582a18b1f97b1919339ddcd9.blame  maintainer-list-cf1b51aba2780fda582a18b1f97b1919339ddcd9.nix
samples/: stderr.nix
src/: cli.rs  filemunge.rs  invited.rs  invites.rs  lib.rs  main.rs  maintainerhistory.rs  maintainers.rs  metrics.rs  nix.rs  op_backfill.rs  op_blame_author.rs  op_check_handles.rs  op_sync_team.rs
