[package]
name = "rfc39"
version = "0.1.0"
authors = ["Graham Christensen <graham@grahamc.com>"]
edition = "2018"
license = "MIT"
publish = false
description = "Sync nixpkgs maintainers with a read-only maintainer group. Implementation of NixOS/rfcs#39."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

hubcaps = "0.5.0"
serde = { version = "1.0.98", features = ["derive"] }
serde_json = "1.0.40"
slog = "2.5"
sloggers = "0.3.2"
structopt = "0.2.18"
