[package]
name = "rfc39"
version = "0.1.0"
authors = ["Graham Christensen <graham@grahamc.com>"]
edition = "2018"
license = "MIT"
publish = false
description = "Sync nixpkgs maintainers with a read-only maintainer group. Implementation of NixOS/rfcs#39."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1.28"
hubcaps = "0.5.0"
hyper = "0.14.26"
lazy_static = "1.3.0"
regex = "1"
serde = { version = "1.0.98", features = ["derive"] }
serde_json = "1.0.40"
slog = "2.5"
sloggers = "0.3.2"
structopt = "0.2.18"
tempfile = "3"
tokio = "0.1.22"
slog-scope = "4.1.2"
slog-stdlog = "4.0.0"
prometheus = "0.7"

[patch.crates-io.hubcaps]
git = "https://github.com/grahamc/hubcaps.git"
# for documentation:
#   branch = "invitations",
rev="2a3d989999fea815ef9ad004d93686e923020adf"
